<resources>
    //layout>Activity_Main
    <string name="app_name">My Application</string>

    <string name="headline">Custo de viagem</string>

    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KMs por litro</string>

    <string name="total_value">Seu gasto total será de:</string>
    <string name="value">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="button_error">Opá, falta algum elemento!</string>


    //layout>login_screen

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="sing_in">Ainda não tem cadasto? Cadastre-se!</string>
    <string name="lost_password">Esqueceu sua senha?</string>

</resources>