<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/edit_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/distance"
            android:textSize="16sp"
            android:layout_marginTop="32dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_km"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginBottom="32dp"/>

    <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/price"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_per_liter"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginBottom="32dp"/>

    <EditText
                android:id="@+id/edit_autonomy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/autonomy"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_per_liter"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginBottom="64dp"
                />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

    <TextView
            android:id="@+id/text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="48sp"
            android:textColor="@color/teal_700"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

    <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/calculate"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="16sp"
            />

</LinearLayout>