<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200" />

    <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:hint="@string/email"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_above="@+id/edit_senha" />

    <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@color/white"
            android:hint="@string/password"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_above="@+id/button_login" />

    <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/login"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:layout_above="@+id/text_sing_in" />

    <TextView
            android:id="@+id/text_sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_in"
            android:textSize="16sp"
            android:layout_margin="24dp"
            android:textAlignment="center"
            android:layout_centerVertical="true" />

    <ImageView
            android:id="@+id/image_view_question_mark"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_baseline_contact_support_24"
            android:layout_margin="24dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/lost_password" />

    <TextView
            android:id="@+id/text_lost_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lost_password"
            android:textSize="20sp"
            android:layout_margin="30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_alignParentBottom="true" />

</RelativeLayout>