<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@color/teal_200">


    <EditText
            android:id="@+id/edtx_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:hint="@string/email"
            android:autofillHints="emailAddress" />

    <EditText
            android:id="@+id/edtx_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edtx_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password" />

    <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/login"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/edtx_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/text_sing_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sing_in"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/img_question_mark"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_baseline_contact_support_24"
            android:contentDescription="@string/lost_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
            android:id="@+id/text_lost_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_password"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/img_question_mark"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>